chart/templates/egress-istio-http.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weatherapi-internal
  namespace: weather
spec:
  hosts:
    - weatherapi.internal
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  location: MESH_INTERNAL
  addresses:
    - 192.168.100.100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weatherapi-external
  namespace: weather
spec:
  hosts:
    - api.weatherapi.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-vs
spec:
  hosts:
    - "*"
  gateways:
#    - egressgw
    - mesh
  http:
#    - match:
#        - gateways:
#            - egressgw
#          port: 80
#      rewrite:
#        authority: api.weatherapi.com
#      route:
#        - destination:
#            host: api.weatherapi.com
#            port:
#              number: 80
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: api.weatherapi.com
#            host: egressgw
#            subset: weatherapi-external
            port:
              number: 80
---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: egressgw
#spec:
#  selector:
#    istio: egressgateway
#  servers:
#    - port:
#        number: 80
#        name: http-port
#        protocol: HTTP
#      hosts:
#        - "*"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: egress-dr-for-api-gw
#spec:
#  host: egressgw.weather.svc.cluster.local
#  subsets:
#    - name: weatherapi-external
#---
