chart/templates/egress-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weatherapi-virtual
  namespace: weather
spec:
  hosts:
    - weatherapi.internal
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  location: MESH_EXTERNAL
  addresses:
     - 192.168.100.100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: weather
  namespace: weather
spec:
  hosts:
    - api.weatherapi.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weatherapi-vs
  namespace: weather
spec:
  hosts:
    - weatherapi.internal
  gateways:
    - weather-gw
    - mesh
  http:
    - match:
        - gateways:
            - weather-gw
          port: 80
      rewrite:
        authority: api.weatherapi.com
      route:
        - destination:
            host: api.weatherapi.com
            port:
              number: 443
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: weather
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-gw
  namespace: weather
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: https-port
        protocol: HTTPS
      hosts:
        - weatherapi.internal
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weather-gw-incoming-dr
  namespace: weather
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: weather
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        portLevelSettings:
          - port:
              number: 80
            tls:
              mode: ISTIO_MUTUAL
              #sni: weather.internal
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weather-outgoing-dr
  namespace: weather
spec:
  host: api.weatherapi.com
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS
          sni: api.weatherapi.com
---
